--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -34,6 +34,9 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
   provider: ^6.0.3
+  file_picker: ^5.0.1
+  video_player: ^2.4.7
+  audioplayers: ^1.0.1
 
 dev_dependencies:
   flutter_test:
@@ -59,6 +62,8 @@ flutter:
   # To add assets to your application, add an assets section, like this:
   assets:
     - assets/file.json
+    - assets/images/photos/
+    - assets/voice/voice_messages/
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware
